# usec-boot

./: .gitignore  .gitmodules  README.md
ext/: .gitignore  monocypher.patch  monocypher.sh
ext/hash/: blake2s.c
ext/monocypher/: README.md  monocypher.c
port/baremetal/nucleo_f411re/: Makefile  custom_tlvs.py  linker.ld  main.c  main.cold  root_pkey.h  startup.c
port/baremetal/nucleo_f411re/testimages/src/: Makefile  linker.ld  main.c  startup.c
port/qemu/: Makefile  linker.ld  main.c  root_pkey.h  startup.c
scripts/: README.md  genimage.py  genkeys.py  genrootpkeyinclude.py  pyproject.toml
scripts/usectool/: cli.py  defines.py  genimage.py  genkeys.py  genrootpkeyinclude.py  init.py
src/: usecboot.c  usecboot.h  usecboot_priv.h  usecboot_rootpubkey.h
